# Instinct

./: CMakeLists.txt  Instinct.cmake  Instinct.cmake.in
include/: stdafx.h
src/: CmdPlanner.cpp  Instinct.cpp  Names.cpp  PlanManager.cpp  main.cpp
